--- a/btp.css
+++ b/btp.css
@@ -79,35 +79,6 @@
   }
 }
 
-@media screen and (max-width: 900px) {
-  .topnav.responsive {
-    position: relative;
-  }
-  .topnav.responsive .icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-}
-
-@media screen and (max-width: 1200px) {
-  #pres{
-    display : none;
-  }
-}
-
-@media screen and (max-width: 900px) {
-  #title {
-    display : none;
-  }
-}
-
-
 /*////////// Style the background //////////*/
 
 .background{
@@ -117,12 +88,20 @@
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position :fixed;
-
-  
 }
 
-/*////////// Style the grey shape //////////*/
+.contact_background{
+  background-image: url("https://wallup.net/wp-content/uploads/2019/09/455828-construction-work-building-job-profession-architecture-design-1.jpg");
+  background-size : 1450px;;
+  height: 150px;
+  background-position : 0 -55px;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position :fixed;
+}
 
+
+/*////////// Style the grey shape //////////*/
 
 #shape1{
   height : 400px;
@@ -130,13 +109,9 @@
   background-color : #efe4da;
   margin :15px 0px 0px;
   font-family : montserrat;
-
 }
 
-
-
 /*////////// Style the map //////////*/
-
 
 .map{
   padding-top : 5px;
@@ -166,9 +141,6 @@ iframe{
   -webkit-transition:all 0.5s linear;
 }
 
-
-
-
 /*////////// Style the footer //////////*/
 
 
@@ -182,7 +154,6 @@ footer {
 .footer_container{
   display : flex;
   flex-direction : row;
-
 }
 
 /* Compagny name */
@@ -237,7 +208,6 @@ footer {
   }
  
 }
-
 
 /* Social */
 
@@ -296,36 +266,6 @@ footer {
 
 }
 
-/*Extra Style - A TRIER */
-
-
-
-
-  .fa-map-marker {
-    padding: 5px;
-    font-size: 20px;
-    width: 30px;
-    height: 30px;
-    text-align: center;
-    text-decoration: none;
-    border-radius: 50%;
-    margin: 5px 2px;
-    color: white;
-  }
-
-  #icon {
-    padding: 5px;
-    font-size: 20px;
-    width: 30px;
-    height: 30px;
-    text-align: center;
-    text-decoration: none;
-    border-radius: 50%;
-    margin: 5px 2px;
-    color: white;
-  }
-
- 
 
 
 
