--- a/btp.css
+++ b/btp.css
@@ -268,5 +268,69 @@ footer {
 
 
 
+/*carrousel mathieu*/
+div#slider figure {
+  position: relative;
+  margin: 0 auto;
+  padding: 0 auto;
+  font-size: 0;
+
+
+}
+
+div#slider figure img {
+  width: 10%;
+  height: 600px;
+  float: left;
+  object-fit: cover;
+  object-position: center;
+}
+
+div#slider {
+
+  width: 100%;
+  height: 600px;
+  overflow: hidden }
+  @keyframes slidy {
+  0% { left: 0%; }
+  5% { left: 0%; }
+  10% { left: -100%; }
+  15% { left: -100%; }
+  20% { left: -200%; }
+  25% { left: -200%; }
+  30% { left: -300%; }
+  35% { left: -300%; }
+  40% { left: -400%; }
+  45% { left: -400%; }
+  50% { left: -500%; }
+  55% { left: -500%; }
+  60% { left: -600%; }
+  65% { left: -600%; }
+  70% { left: -700%; }
+  75% { left: -700%; }
+  80% { left: -800%; }
+  85% { left: -800%; }
+  90% { left: -900%; }
+  95% { left: -900%; }
+
+
+
+}
+div#slider figure {
+  position: relative;
+  width: 1000%;
+  margin: 0;
+  padding: 0;
+  font-size: 0;
+  left: 0;
+  text-align: left;
+  animation: 40s slidy infinite;
+}
+.mh1{
+  font-family: "Gill Sans", sans-serif;
+  color: darkgray;
+  font-size: 80px;
+  margin-left: 2.5%;
+}
 
  
