--- a/btp.css
+++ b/btp.css
@@ -2,12 +2,13 @@
 /*////////// **************** ACCUEIL.HTML **************** //////////*/
 
 
-/*////////// Apply to whole page //////////*/
+/*////////// Apply everywhere //////////*/
 
 * {
   box-sizing: border-box;
   margin : 0;
 }
+
 
 /*//////////   Style the header  //////////*/
 
@@ -53,9 +54,16 @@
   transition: all ease-in-out 350ms;  
 }
 
+.topnav .online{
+  color : grey;
+}
+
 /* Change color on hover */
 .topnav a:hover {
-  color : grey;
+opacity : 0.5;
+
+
+
 }
 
 /* Responsive Topnav */
@@ -80,6 +88,32 @@
   .topnav a.icon {
     float: right;
     display: block;
+  }
+
+}
+@media screen and (max-width: 1200px) {
+  /* .topnav.responsive {
+    position: relative;
+    display : block;
+  }
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  } */
+
+  .topnav.responsive .icon {
+    margin-top : -200px;
+  }
+
+  .topnav.responsive a{
+    display : flex;
+    flex-direction : column;
   }
 }
 
@@ -334,4 +368,168 @@ input[type=submit]:hover {
 .container {
   border-radius: 5px;
   padding: 20px;
+}
+
+
+/*////////// **************** REALISATIONS.HTML **************** //////////*/
+
+
+
+div#slider figure {
+  position: relative;
+  margin: 0 auto;
+  padding: 0 auto;
+  font-size: 0;
+}
+
+div#slider figure img {
+  width: 10%;
+  height: 600px;
+  float: left;
+  object-fit: cover;
+  object-position: center;
+}
+
+div#slider {
+  width: 100%;
+  height: 600px;
+  overflow: hidden }
+  @keyframes slidy {
+  0% { left: 0%; }
+  5% { left: 0%; }
+  10% { left: -100%; }
+  15% { left: -100%; }
+  20% { left: -200%; }
+  25% { left: -200%; }
+  30% { left: -300%; }
+  35% { left: -300%; }
+  40% { left: -400%; }
+  45% { left: -400%; }
+  50% { left: -500%; }
+  55% { left: -500%; }
+  60% { left: -600%; }
+  65% { left: -600%; }
+  70% { left: -700%; }
+  75% { left: -700%; }
+  80% { left: -800%; }
+  85% { left: -800%; }
+  90% { left: -900%; }
+  95% { left: -900%; }
+}
+
+div#slider figure {
+  position: relative;
+  width: 1000%;
+  margin: 0;
+  padding: 0;
+  font-size: 0;
+  left: 0;
+  text-align: left;
+  animation: 40s slidy infinite;
+  margin-top:20px;
+}
+
+.mh1{
+  font-family: "Gill Sans", sans-serif;
+  color: darkgray;
+  font-size: 80px;
+  margin-left: 2.5%;
+}
+
+#shape2{
+  height : 60px;
+  width : 100%;
+  background-color : #efe4da;
+  margin-top: 10px;
+  margin-bottom : 5px;
+}
+
+#shape3{
+  height : 50px;
+  width : 100%;
+  background-color : #efe4da;
+  margin-top: 15px;
+  margin-bottom:-10px;
+}
+
+/*////////// **************** EQUIPE.HTML **************** //////////*/
+
+.card {
+  width: 600px;
+  display: flex;
+  box-shadow: 0 8px 12px 0 rgba(0,0,0,0.5);
+  transition: 0.3s;
+  border-radius: 5px;
+  height: 200px;
+}
+
+.container {
+  width: 450px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: whitesmoke;
+}
+
+.imgCard {
+  border-radius: 5px 5px 0 0;
+  width: 400px;
+  object-fit: cover;
+}
+
+.bigContainer{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content:center;
+  gap: 40px;
+  background-color: #efe4da;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+#shapeEquipe{
+  background-color : #efe4da;
+  margin-top: 15px;
+  font-family : montserrat;
+}
+
+.bigContainer p{
+  text-align : center;
+}
+
+.bigContainer h4{
+  color: #a7917d;
+}
+
+
+/*////////// **************** PRESENTATION.HTML **************** //////////*/
+
+.presentation h3{
+  text-align:center;  
+  line-height : 25px;
+  font-weight: bold ;
+  margin-top:12px;
+  font-size: 25 px;
+}
+
+.presentation p{
+  text-align:center;  
+  justify-content: center;
+  margin-right: 300px;
+  margin-left: 300px;
+  margin-top : 20px;
+
+}
+
+
+
+#shape4{
+  height : 400px;
+  width : 100%;
+  background-color : #efe4da;
+  margin-top: 15px;
+  font-family : montserrat;
+  display : flex;
+  flex-direction   : column;
+  justify-content: center;
 }
