--- a/btp.css
+++ b/btp.css
@@ -62,8 +62,6 @@
 .topnav a:hover {
 opacity : 0.5;
 
-
-
 }
 
 /* Responsive Topnav */
@@ -104,7 +102,6 @@ opacity : 0.5;
 }
 
 
-
 /*////////// Style the background //////////*/
 
 .background{
@@ -126,15 +123,34 @@ opacity : 0.5;
   background-position :fixed;
 }
 
-
 /*////////// Style the grey shape //////////*/
 
 #shape1{
-  height : 400px;
+  height : 180px;
   width : 100%;
   background-color : #efe4da;
-  margin-top: 15px;
+  margin-top: 10px;
+  margin-bottom:5px;
   font-family : montserrat;
+  text-align : center;
+}
+
+#shape1 h2 {
+  padding-top : 60px;
+  font-family : Anton;
+  font-weight : lighter;
+  font-size : 30px;
+}
+
+#shape1 a {
+  color : #f3c70f;
+}
+
+#shape1 a:visited {
+  /* color:rgb(138, 138, 241); */
+  color : #f3c70f;
+
+
 }
 
 /*////////// Style the map //////////*/
@@ -232,8 +248,7 @@ footer {
   .sitemap a {
     display: none;
   }
-
-}
+  }
 
 /* Social */
 
@@ -356,13 +371,18 @@ input[type=submit]:hover {
   padding: 20px;
 }
 
+#shape6{
+  height : 400px;
+  width : 100%;
+  background-color : #efe4da;
+  margin-top: 10px;
+  margin-bottom:5px;
+  font-family : montserrat;
+}
+
+
 /*////////// **************** REALISATIONS.HTML **************** //////////*/
 
-
-
-
-
-/*////////// **************** carrousel **************** //////////*/
 
 div#slider figure {
   position: relative;
@@ -380,7 +400,8 @@ div#slider figure img {
 }
 
 div#slider {
-  width: 100%;
+  width: 95%;
+  margin-left:2.3%;
   height: 600px;
   overflow: hidden }
   @keyframes slidy {
@@ -433,7 +454,7 @@ div#slider figure {
 }
 
 #shape3{
-  height : 50px;
+  height : 30px;
   width : 100%;
   background-color : #efe4da;
   margin-top: 15px;
@@ -507,8 +528,6 @@ div#slider figure {
   margin-top : 20px;
 }
 
-
-
 #shape4{
   height : 400px;
   width : 100%;
@@ -525,14 +544,10 @@ div#slider figure {
   background-color : #efe4da;
   margin-top: 25px;
   font-family : montserrat;
-
 }
 
-/*////////// **************** Presentation page **************** //////////*/
-
-
 .containerPres{
-padding: 30px;
+  padding: 30px;
   display: flex;
   gap: 150px;
 }
@@ -540,9 +555,8 @@ padding: 30px;
 .titrePres{
   font-size: 25px;
   text-align: left;
-
-
 }
+
 .textePres{
   background-color: white;
   display: flex;
@@ -550,10 +564,12 @@ padding: 30px;
   font-size: 20px;
   font-family: arial;
 }
+
 .nomPres{
   text-align: center;
   font-size: 40px;
 }
+
 .card2 {
 
   display: flex;
@@ -562,3 +578,12 @@ padding: 30px;
   border-radius: 5px;
   height: 300px;
 }
+
+@media screen and (max-width: 900px) {
+  .presentation p {
+    display: none;
+  }
+  .presentation h3 {
+    display: none;
+  }
+  }
